--- a/apps/vue-backoffice/src/assets/base.css
+++ b/apps/vue-backoffice/src/assets/base.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Sarina&display=swap');
+
+@import 'tailwindcss';
+
+@theme {
+  --font-sarina: 'Sarina', cursive;
+  --font-roboto-mono: 'Roboto Mono', monospace;
+}
+
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
   --vt-c-white: #ffffff;
@@ -50,14 +59,6 @@
   }
 }
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-  font-weight: normal;
-}
-
 body {
   min-height: 100vh;
   color: var(--color-text);
@@ -67,6 +68,7 @@ body {
     background-color 0.5s;
   line-height: 1.6;
   font-family:
+    'Roboto Mono',
     Inter,
     -apple-system,
     BlinkMacSystemFont,
